[package]
name = "crate-cyclone-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
deadpool-postgres = "0.10.5"
dotenv = "0.15.0"
reqwest = "0.11"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tokio-postgres = "0.7.8"
tower = "0.4.13"
