[package]
name = "hyper-cyclone"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tower = "0.4"